# speech2speech

./: .dockerignore  .env.sample  CHANGELOG.md  Dockerfile  Dockerfile.remote  LATENCY.md  MULTI_SESSION_PLAN.md  README.md  REMOTE_SETUP.md  TODO.md  docker-compose.remote.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: INSTALL_AND_CONFIGURATION.md  MULTI_SESSION_PLAN.md  SPEAKER_ID.md  TODO.md
rust/aec3_py/: Cargo.toml  Dockerfile.verify  pyproject.toml
rust/aec3_py/src/: lib.rs
scripts/: bench_tts.py  load_test_sessions.py  parse_latency.py  probe_minimax.py  realtime_loadgen.py  realtime_test_client.html  soak_sessions.py
speaker-id/: .dockerignore  .env.sample  Dockerfile  requirements-diarize.txt  requirements.txt
speaker-id/app/: audio.py  auth.py  decision.py  diarization.py  embedding.py  mailer.py  main.py  models.py  quality.py  store.py
speaker-id/app/static/: enroll.html  enroll_invite.html
src/speech_to_speech/: debug.py  s2s_pipeline.py
src/speech_to_speech/LLM/: responses_api_language_model.py  utils.py
src/speech_to_speech/STT/: remote_openai_stt_handler.py  transcription_notifier.py
src/speech_to_speech/TTS/: elevenlabs_tts_handler.py  minimax_tts_handler.py  remote_openai_tts_handler.py
src/speech_to_speech/VAD/: smart_turn.py  vad_handler.py  vad_iterator.py
src/speech_to_speech/api/openai_realtime/: runtime_config.py  server.py  service.py  websocket_router.py
src/speech_to_speech/api/openai_realtime/handlers/: audio.py  base.py  response.py  session.py
src/speech_to_speech/arguments_classes/: elevenlabs_tts_arguments.py  language_model_base_arguments.py  minimax_tts_arguments.py  module_arguments.py  remote_openai_stt_arguments.py  remote_openai_tts_arguments.py  responses_api_language_model_arguments.py  speaker_id_arguments.py  vad_arguments.py
src/speech_to_speech/audio/: echo_canceller.py
src/speech_to_speech/pipeline/: events.py  handler_types.py  messages.py  session_pipeline.py
src/speech_to_speech/speaker_id/: correction_tracker.py  remote_speaker_client.py
src/speech_to_speech/utils/: concurrency.py  thread_manager.py  utils.py  ws_client.py
tests/: install_smoke.py  test_cli_defaults.py  test_concurrency_limiter.py  test_echo_canceller_close.py  test_loadgen.py  test_prewarm_startup.py  test_remote_handlers.py  test_remote_speaker_client.py  test_stt_shared_speaker_client.py  test_vad_prewarm.py  test_websocket_session_lifecycle.py  test_ws_keepalive.py
tests/openai_realtime/: conftest.py  test_openai_client.py  test_realtime_service.py  test_websocket_router.py
