[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech-to-speech"
version = "0.4.1"
description = "Low-latency speech-to-speech pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Hugging Face" },
]
keywords = ["speech-to-speech", "voice-agents", "speech-recognition", "text-to-speech", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "nltk==3.9.4",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "openai==2.28.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "scipy>=1.10.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "transformers>=4.57.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/winoiknow/speech2speech"
Repository = "https://github.com/winoiknow/speech2speech"
Issues = "https://github.com/winoiknow/speech2speech/issues"

[project.scripts]
speech-to-speech = "speech_to_speech.s2s_pipeline:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "websockets>=12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = true
prerelease = "allow"

[tool.setuptools.packages.find]
where = ["src"]
include = ["speech_to_speech*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
speech_to_speech = ["TTS/*.wav"]

[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = false
