[package]
name = "aec3_py"
version = "0.1.0"
edition = "2021"

[lib]
name = "aec3_py"
crate-type = ["cdylib"]

[dependencies]
# abi3-py39: one portable wheel for any CPython >= 3.9, so the rust:slim builder
# stage (newer Python) and the python:3.11-slim runtime don't have to match.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
# Pure-Rust WebRTC AEC3 port (RubyBit/aec3-rs). edition 2024 -> needs rustc >= 1.85.
aec3 = "0.2"
